* Added methods for waiting for instances to be in various target states
* Added a method to wait for an AMI to become available after creation
* Added a method to create a network interface
* Added a method to launch a VM onto a dedicated host
* Added a setup script
* Added the migrate CLI command, and a method to check capacity of a specific instance type on a dedicated host

0.0.11
=======

* Added queries for listing test assets
* Added a query for getting dependent assets
* Added ec2util functions for getting a list of IpPermission objects from domain names
* Added network.py and new function for getting IPs froma list of hostnames

0.0.10
=======

* Fixed a bug reporting errors with servicerunner
* Added a method to power on multiple runs
* Optimized queries to retrieve DR details from the multiple run host action workflow
* Significantly power action delay times, these are handled on the server side
* Added the --config CLI arg to specify which config file to use
* Added the --assets CLI arg to generate team reports for assets used by active DRs
* Added the "cons3rt team managers" and optionally "--id=ID" to generate a list of team managers
* Added remoteaccesscontroller.py and a new ractl CLI command for easy execution
* Added an export/import script to help migrate assets between CONS3RT sites
* Improved the asset import/update CLI logic, and added the "asset updateonly" subcommand
* Added the option to pass --id to the "asset update" command (e.g. asset update --id=12345)
* Added CLI command to get project members: cons3rt project members list --id=123
* Added CLI commands to create cloud and register a cloudspace
* Updated the template registration auto-discovery
* Added force delete for assets

0.0.9
=====

* Removed GPU from template registraiton/subscription to react to CONS3Rt changes
* Added the s3organizer CLI command and tool for helping organize, move, and delete items in S3 buckets